--- a/package.json
+++ b/package.json
@@ -6,6 +6,20 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mgkbsh/ntTweetService.git"
+  },
   "author": "Akiba Sato, Kevin Wang, Meg Kobashi",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mgkbsh/ntTweetService/issues"
+  },
+  "homepage": "https://github.com/mgkbsh/ntTweetService#readme",
+  "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.3",
+    "nodemon": "^1.17.3"
+  }
 }
