--- a/config/config.json
+++ b/config/config.json
@@ -5,12 +5,14 @@
     "database": "ntdev",
     "host": "localhost",
     "dialect": "postgres",
-    "user_service": "http://localhost:1234/"
+    "user_service": "http://localhost:1234/",
+    "cache_service": "http://localhost:2000/"
   },
   "production": {
     "use_env_variable": "DATABASE_URL",
     "dialect": "postgres",
-    "user_service": "https://ntusers-tjak.herokuapp.com/"
+    "user_service": "https://ntusers-tjak.herokuapp.com/",
+    "cache_service": "https://nt-cache.herokuapp.com/"
   },
   "test": {
     "username": "",
