--- a/config/config.json
+++ b/config/config.json
@@ -6,13 +6,23 @@
     "host": "localhost",
     "dialect": "postgres",
     "user_service": "http://localhost:1234/",
-    "cache_service": "http://localhost:2000/"
+    "cache_service": "http://localhost:2000/",
+    "pool": {
+      "max": 10,
+      "min": 0,
+      "idle": 1000
+    }
   },
   "production": {
     "use_env_variable": "DATABASE_URL",
     "dialect": "postgres",
     "user_service": "https://ntusers-tjak.herokuapp.com/",
-    "cache_service": "https://nt-cache.herokuapp.com/"
+    "cache_service": "https://nt-cache.herokuapp.com/",
+    "pool": {
+      "max": 10,
+      "min": 0,
+      "idle": 1000
+    }
   },
   "test": {
     "username": "",
@@ -21,5 +31,6 @@
     "host": "localhost",
     "dialect": "postgres",
     "logging": false
+
   }
 }
